--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -1,5 +1,6 @@
 <%- include("templates/header") %>
     <link rel="stylesheet" type="text/css" href="/styles/tasks.css" text="">
+    <link rel="stylesheet" type="text/css" href="../../styles/mainOld.css" text="">
 
     </head>
 
@@ -39,15 +40,17 @@
                         <span>
                             <form method="post" action="/addPointDiet" style="display: inline" id="doneForm1">
                                 <input type="text" name="task" value="<%= task1 %>" hidden>
-                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton1">Done</button>
+                                <button class="btn btnz btn-primary float-right" type="submit"
+                                    id="doneButton1">Done</button>
                             </form>
                             <form method="post" action="/rerollDiet" style="display: inline">
                                 <input type="text" name="number" value="1" hidden>
-                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn"
+                                        src="/img/reroll.png" alt="logo"></button>
                             </form>
                         </span>
                     </div>
-                    
+
                     <div class="card" id="taskCard2">
                         <div class="card-body" id="taskBody2">
                             <%= task2 %>
@@ -55,15 +58,17 @@
                         <span>
                             <form method="post" action="/addPointDiet" style="display: inline" id="doneForm2">
                                 <input type="text" name="task" value="<%= task2 %>" hidden>
-                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton2">Done</button>
+                                <button class="btn btnz btn-primary float-right" type="submit"
+                                    id="doneButton2">Done</button>
                             </form>
                             <form method="post" action="/rerollDiet" style="display: inline">
                                 <input type="text" name="number" value="2" hidden>
-                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn"
+                                        src="/img/reroll.png" alt="logo"></button>
                             </form>
                         </span>
                     </div>
-                    
+
                     <div class="card" id="taskCard3">
                         <div class="card-body" id="taskBody3">
                             <%= task3 %>
@@ -71,20 +76,22 @@
                         <span>
                             <form method="post" action="/addPointDiet" style="display: inline" id="doneForm3">
                                 <input type="text" name="task" value="<%= task3 %>" hidden>
-                                <button class="btn btnz btn-primary float-right" type="submit" id="doneButton3">Done</button>
+                                <button class="btn btnz btn-primary float-right" type="submit"
+                                    id="doneButton3">Done</button>
                             </form>
                             <form method="post" action="/rerollDiet" style="display: inline">
                                 <input type="text" name="number" value="3" hidden>
-                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn" src="/img/reroll.png" alt="logo"></button>
+                                <button class="btn btns btn-secondary float-right" type="submit"><img class="rerollbtn"
+                                        src="/img/reroll.png" alt="logo"></button>
                             </form>
                         </span>
                     </div>
 
         </div>
         <div>
-            <% if(boostActive > 0) { %>
+            <% if(boostActive> 0) { %>
                 <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
-              <% } %>
-            </div>
-           
+                <% } %>
+        </div>
+
         <%- include("templates/footer") %>
