--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/header") %>
-<link rel="stylesheet" type="text/css" href="/styles/style.css" text="
+<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 	</head>
 	<div class="header">
 	</div>
