Fixed styling on password reset pages

--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -1,4 +1,6 @@
+<!-- Password Reset Page -->
 <%- include("templates/header") %>
+	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 </head>
 
 <div class="title" class="center">
