--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-
+/* Universal styling for index, login, signup, and password reset pages reset-email and reset-password */
 
 .button {
     border-radius: 25px;
