--- a/views/reset-email.ejs
+++ b/views/reset-email.ejs
@@ -1,4 +1,6 @@
+<!-- Resetting password email submission form -->
 <%- include("templates/header") %>
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 </head>
 
 <div class="title" class="center">
@@ -31,6 +33,7 @@
 
 <%- include("templates/end") %>
 
+<!-- Custom styling -->
 <style>
     .index-btn.increased-width {
         width: 200px; /* Adjust the width as per your design */
