--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-
-/*
 .button {
     border-radius: 25px;
     margin-top: 20px;
@@ -31,7 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 250px; /* Ensure the height is set to match the image height *
+  height: 250px; /* Ensure the height is set to match the image height */
 }
 
 .title img {
@@ -85,13 +83,10 @@
     height: 100%;
     width: 80%;
     display: flex; /* Use flexbox *
-    justify-content: space-between; /* Space items evenly *
+    justify-content: space-between; /* Space items evenly */
 }
 
 .resize {
     font-size: 15px;
 
 }
-
-
-*/
