--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/header") %>
-	<link rel="stylesheet" type="text/css" href="/styles/change.css" text="">
+	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 	</head>
 
 	<div class="title" class="center">
