Comment for style.css

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* Universal styling for index, login, signup, reset-email, reset-password */
 .button {
     border-radius: 25px;
     margin-top: 20px;
