updated fitness css

--- a/styles/main.css
+++ b/styles/main.css
@@ -555,15 +555,16 @@ footer {
     width: 60px;
     height: 60px;
     border-radius: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     opacity: 0.4;
     z-index: -0;
 }
 
 #notification-icon {
     position: absolute;
-    right: 35px;
-    top: 85px;
+    color: white;
+    right: 15px;
+    top: 15px;
 }
 
 
