--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -1,11 +1,10 @@
-<%- include("templates/header") %>
+<%- include("templates/headerOld") %>
     <link rel="stylesheet" type="text/css" href="/styles/tasks.css" text="">
-    <link rel="stylesheet" type="text/css" href="../../styles/mainOld.css" text="">
 
     </head>
 
     <body>
-
+        <a href="/" id="back" type="button">Back</a>
         <div>
             <form action="/shop" method="get">
                 <button type="submit" class="rerolls">
@@ -94,4 +93,4 @@
                 <% } %>
         </div>
 
-        <%- include("templates/footer") %>
+        <%- include("templates/end") %>
