--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -120,23 +120,12 @@
   width: 50px;
   height: 50px;
 }
-#go-back-icon {
-  position: absolute;
-  left: 27px;
-  top: 59px;
-  width:30px;
-  height:30px;
-}
+
     </style>
     </head>
     
     <br>
-    <a href="/" id="go-back"></a>
-    <svg id="go-back-icon" width="55" height="55" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="M17 3L10.6648 5.7151C10.231 5.90101 9.86061 6.20908 9.59882 6.60178V6.60178C7.41955 9.87068 7.41955 14.1293 9.59882 17.3982V17.3982C9.86061 17.7909 10.231 18.099 10.6648 18.2849L17 21"
-        stroke="black" stroke-width="2" stroke-linejoin="round" />
-    </svg>
+    <a href="/" class="back-button">Back</a>
     <div class="shop-container">
         <h1>Shop</h1>
         <img src="../img/shop.png" alt="Shop Image" class="shop-image">
