--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -1,10 +1,11 @@
-<%- include("templates/header") %>
+<%- include("templates/headerOld") %>
+
     <link rel="stylesheet" type="text/css" href="/styles/tasks.css" text="">
 
     </head>
 
     <body>
-
+        <a href="/" id="back" type="button">Back</a>
         <div>
             <form action="/shop" method="get">
                 <button type="submit" class="rerolls">
@@ -89,4 +90,4 @@
             </div>
             
                 
-        <%- include("templates/footer") %>
+        <%- include("templates/end") %>
