Fixed update notification in profile and made main load user pfp

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -21,7 +21,7 @@
     </div>
     <div id="hello-container">
       <div id="avatar">
-
+        <img src="./images/<%= userID %>" alt="Profile" class="profile-image" id="main-pfp">
       </div>
       <div id="hello-user">
         <%= greeting %>, <%= username %> <span id="rank">
