--- a/styles/main.css
+++ b/styles/main.css
@@ -526,6 +526,17 @@ footer {
     border-radius: 50%;
     width: 80px;
     height: 80px;
+    overflow: hidden; /* Ensure the image does not exceed the container */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#main-pfp {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Ensure the image fits within the container without being cropped */
+    border-radius: 50%; /* Ensure the image takes the circular shape of the container */
 }
 
 #hello-user {
