--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -1,5 +1,6 @@
 <%- include("templates/header") %>
     <link rel="stylesheet" href="/styles/change.css">
+    <link rel="stylesheet" href="/styles/style.css">
     </head>
 
     <div class="title" class="center">
@@ -12,14 +13,14 @@
             <div class="alert alert-danger" role="alert">
                 <h1>Invalid Password</h1>
             </div>
-            <form action="/changePassword" method="POST" class="index-form center">
+            <form action="/changePassword" method="POST" class="change-form center">
                 <h1>New Password</h1>
                 <h5>Must be between 8-20 characters</h5>
                 <input type="password" name="password" placeholder="Password" class="border" required>
                 <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
             </form>
             <% } else { %>
-                <form action="/changePassword" method="POST" class="index-form center">
+                <form action="/changePassword" method="POST" class="change-form center">
                     <h1>New Password</h1>
                     <h5>Must be between 8-20 characters</h5>
                     <input type="password" name="password" placeholder="Password">
