--- a/views/changeEmail.ejs
+++ b/views/changeEmail.ejs
@@ -1,5 +1,6 @@
 <%- include("templates/header") %>
     <link rel="stylesheet" href="/styles/change.css">
+    <link rel="stylesheet" href="/styles/style.css">
     </head>
 
     <div class="title" class="center">
@@ -12,13 +13,13 @@
             <div class="alert alert-danger" role="alert">
                 <h1>Invalid Email</h1>
             </div>
-            <form action="/changeEmail" method="POST" class="index-form center">
+            <form action="/changeEmail" method="POST" class="change-form center">
                 <h1>New Email</h1>
                 <input type="email" name="email" placeholder="Email" class="border" required>
                 <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
             </form>
             <% } else { %>
-                <form action="/changeEmail" method="POST" class="index-form center">
+                <form action="/changeEmail" method="POST" class="change-form center">
                     <h1>New Email</h1>
                     <input type="email" name="email" placeholder="Email" required>
                     <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
