--- a/views/changeUsername.ejs
+++ b/views/changeUsername.ejs
@@ -1,5 +1,6 @@
 <%- include("templates/header") %>
     <link rel="stylesheet" href="/styles/change.css">
+    <link rel="stylesheet" href="/styles/style.css">
     </head>
 
     <div class="title" class="center">
@@ -12,7 +13,7 @@
             <div class="alert alert-danger" role="alert">
                 <h1>Invalid Username</h1>
             </div>
-            <form action="/changeUsername" method="POST" class="index-form center">
+            <form action="/changeUsername" method="POST" class="change-form center">
                 <h1>New Username</h1>
                 <h5>Must be between 8-20 characters</h5>
                 <h5>No spaces or special characters</h5>
@@ -20,7 +21,7 @@
                 <button type="submit" class="index-btn" onclick="confirmChange(event)">Confirm</button>
             </form>
             <% } else { %>
-                <form action="/changeUsername" method="POST" class="index-form center">
+                <form action="/changeUsername" method="POST" class="change-form center">
                     <h1>New Username</h1>
                     <h5>Must be between 8-20 characters</h5>
                     <h5>No spaces or special characters</h5>
