fixed ai chat on task pages

--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -18,7 +18,7 @@
 
         <!-- Chatbot -->
         <div class="Chatter">
-            <form action="/aichat-home" method="get">
+            <form action="/aichat-loading" method="get">
                 <button type="submit" class="btner"><img src="/img/chatBotImg.png"></button>
             </form>
         </div>
