--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,7 +24,7 @@
         <img src="./images/<%= userID %>" alt="Profile" class="profile-image" id="main-pfp">
       </div>
       <div id="hello-user">
-        <%= greeting %>, <%= username %> <span id="rank">
+        <%= greeting %>, <%= username %> <span id="rank"><br>
               <%= rank %>, <%= points %> points
             </span>
       </div>
@@ -422,14 +422,14 @@
     <div id="diet-rec-initiate" class="training-card">
       <!-- Card 1 content -->
       <h2 class="training-plan-text">Get Started</h2>
-      <div id="start-diet-plan">
+      <a href="dietTasks" id="start-diet-plan">
         <svg class="start-training-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
             d="M9.40994 4.60259L9.56599 4.6416C13.0626 5.51575 16.1078 7.66179 18.1071 10.6607C18.6478 11.4718 18.6478 12.5285 18.1071 13.3396C16.1078 16.3384 13.0626 18.4845 9.56599 19.3586L9.40994 19.3976C8.07899 19.7304 6.7303 18.9212 6.39756 17.5902L6.20004 16.8001C5.41216 13.6486 5.41216 10.3516 6.20004 7.20011L6.39756 6.41001C6.7303 5.07906 8.07899 4.26985 9.40994 4.60259Z"
             fill="white" />
         </svg>
-      </div>
+      </a>
     </div>
     <div class="training-card individual-plan">
       <!-- Card 2 content -->
