Resized front end error messages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <%- include("templates/header") %>
+	<link rel="stylesheet" type="text/css" href="/styles/change.css" text="">
 	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 	</head>
 
@@ -11,7 +12,7 @@
 		<br>
 		<% if (input==1) { %>
 			<div class="alert alert-danger" role="alert">
-				<h1>Invalid Email or Password</h1>
+				<h5>Invalid Email or Password</h5>
 			</div>
 			<% } %>
 				<!-- Go Back button -->
