--- a/views/reset-email.ejs
+++ b/views/reset-email.ejs
@@ -15,13 +15,13 @@
     <% } %>
     <!-- Display success message -->
     <% if (successMessage) { %>
-        <div class="alert alert-success resize"><h1><%= successMessage %></h1></div>
+        <div class="alert alert-success resize"><h5><%= successMessage %></h5></div>
         <button type="button" onclick="location.href='/login'" class="index-btn" style="margin-left: 10px;">Login</button>
         <br><br><br>
  <% } else { %>
         <form action="/reset-email" method="POST" class="index-form center">
                 <h1 for="email" class="resize h1-label">Enter your email:</h1>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
                 <div class="button-container centered-buttons">
                     <button type="submit" class="index-btn increased-width">Reset Password</button>
                     <button type="button" onclick="location.href='/'" class="index-btn increased-width">Return to Index</button>
