--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -1,5 +1,6 @@
 <%- include("templates/header") %>
 	<link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
+
 </head>
 
 <div class="title" class="center">
@@ -9,21 +10,23 @@
 <div class="reset-password bg-light">
     <!-- Display error message -->
     <% if (errorMessage) { %>
-        <div class="alert alert-danger resize"><h5><%= errorMessage %></h5></div>
+        <div class="alert alert-danger">
+            <h5><%= errorMessage %></h5>
+        </div>
     <% } %>
     <!-- Display success message -->
     <% if (successMessage) { %>
-        <div class="alert alert-success resize"><h1><%= successMessage %></h1></div>
+        <div class="alert alert-success resize"><h5><%= successMessage %></h5></div>
         <button type="button" onclick="location.href='/'" class="index-btn" style="margin-left: 10px;">Login</button>
         <br><br><br>
     <% } else { %>
         <form action="/reset-password" method="POST" class="index-form center-form">
             <input type="hidden" name="token" value="<%= token %>">
             <h1 for="newPassword" class="resize">Enter new password:</h1>
-            <input type="password" id="newPassword" name="newPassword" required>
+            <input type="password" id="newPassword" name="newPassword" placeholder="Password" required>
             <br>
             <h1 for="confirmNewPassword" class="resize">Confirm new password:</h1>
-            <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
+            <input type="password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Password" required>
             <div class="button-container">
                 <button type="submit" class="index-btn increased-width">Reset Password</button>
             </div>
