Updated a few icons and such

--- a/styles/profile.css
+++ b/styles/profile.css
@@ -41,7 +41,7 @@ body {
 
 #go-back:hover {
     color: white;
-    background-color: white;
+    background-color: #f7760c;
     cursor: pointer;
 }
 
