--- a/views/communityPost.ejs
+++ b/views/communityPost.ejs
@@ -51,17 +51,20 @@
             <!-- Form for creating a new post -->
             <form action="/communityPost/post" method="post" enctype="multipart/form-data" id="communityPostForm">
                 <textarea name="text" rows="4" cols="50" placeholder="Write something...(optional)"
-                    id="postText"></textarea><br>
+                    id="postText"></textarea>
+                <h1>Images</h1>
                 <input type="file" name="images" id="imageInput" multiple accept="image/*"><br>
-                <div class="preview" id="imagePreview"></div><br>
+                <div class="preview" id="imagePreview"></div>
                 <button type="button" id="clearImagesButton">Clear All Images</button><br>
+                <h1>Tag</h1><br>
                 <select name="tags" id="tags">
                     <option value="" selected>Select</option>
                     <option value="fitness">Fitness</option>
                     <option value="diet">Diet</option>
-                </select><br>
+                </select>
 
                 <!-- Map for selecting location -->
+                <h1>Location</h1>
                 <div id="map" style="height: 300px; width: 100%;"></div><br>
                 <button type="button" id="clearPinButton">Clear Pin</button><br>
                 <input type="hidden" id="latitude" name="latitude">
