Modified placeholder text in the text area

--- a/views/communityPost.ejs
+++ b/views/communityPost.ejs
@@ -50,7 +50,7 @@
 
             <!-- Form for creating a new post -->
             <form action="/communityPost/post" method="post" enctype="multipart/form-data" id="communityPostForm">
-                <textarea name="text" rows="4" cols="50" placeholder="Write something...(optional)"
+                <textarea name="text" rows="4" cols="50" placeholder="Write something...(optional if an image is added)"
                     id="postText"></textarea>
                 <h1>Images</h1>
                 <input type="file" name="images" id="imageInput" multiple accept="image/*"><br>
