--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -102,7 +102,7 @@
 
         <!-- Danger Zone/Logout -->
         <div class="section danger-zone">
-            <div class="section-title">Danger Zone</div>
+            <div class="section-title"></div><hr>
             <div class="item" action="/logout" method="get">
                 <a href="/logout" type="submit" id="logoutLink" style="text-decoration : none;">
                     <span class="icon">❌</span>
