--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -129,7 +129,7 @@
     <div class="shop-container">
         <h1>Shop</h1>
         <img src="../img/shop.png" alt="Shop Image" class="shop-image">
-        <h2>Spending Points: <%= currentPoints %>
+        <h2>Spending Points: 🪙<%= currentPoints %>     
         </h2>
     </div>
     <ol class="shopitems">
