--- a/styles/ai-training-questions.css
+++ b/styles/ai-training-questions.css
@@ -5,6 +5,8 @@ body {
     background-color: black;
 }
 
+
+
 #logo {
     position: absolute;
     top: 100px;
@@ -20,7 +22,7 @@ body {
     position: absolute;
     left: 20px;
     top: 50px;
-    background-color: rgb(221, 218, 218);
+    background-color: white;
     opacity: 0.4;
     border-radius: 20px;
     width: 50px;
@@ -29,8 +31,9 @@ body {
 
 #go-back-icon {
     position: absolute;
-    left: 28px;
-    top: 59px;
+    left: 7px;
+    top: 10px;
+   
 }
 
 #setting {
