--- a/views/main.ejs
+++ b/views/main.ejs
@@ -448,7 +448,7 @@
   <div class="px-4 py-5 my-5 text-center">
     <div id="main">
       <div id="header">
-        <h1>Leader Board</h1>
+        <h1>Leaderboard</h1>
       </div>
       <div id="leaderboard">
         <div class="ribbon "></div>
