--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -4,33 +4,47 @@
     </head>
 
     <body>
-        <a href="/" id="back" type="button">Back</a>
-        <div>
-            <form action="/shop" method="get">
-                <button type="submit" class="rerolls">
-                    <img class="rerollImg" src="/img/reroll.png">
-                    <span class="reroll">: <%=rerolls%>
-                    </span>
-                </button>
-            </form>
-        </div>
+        <div class="container2 inline">
+            <a href="/" id="back" type="button" style="font-size: 10px;">Back</a>
 
-        <!-- Chatbot -->
-        <div class="Chatter">
-            <form action="/aichat-loading" method="get">
-                <button type="submit" class="btner"><img src="/img/chatBotImg.png"></button>
-            </form>
+            <div class="Chatter">
+                <form action="/aichat-loading" method="get">
+                    <button type="submit" class="btner"><img src="/img/chatBotImg.png"></button>
+                </form>
+            </div>
+
+            <div>
+                <form action="/shop" method="get">
+                    <button type="submit" class="rerolls">
+                        <img class="rerollImg" src="/img/reroll.png">
+                        <span class="reroll">: <%=rerolls%></span>
+                    </button>
+                </form>
+            </div>
+
+
         </div>
 
         <!--Contents in the body tag-->
-        <img class="titles" src="/img/DietLogo.png" alt="logo">
+        <h1 class="text-center">
+            <svg id="diet-icon" width="100" height="100" viewBox="0 0 24 24" fill="none" style="margin-top: 50px;"
+                xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M4 2V9.67544C4 10.8969 4.78159 11.9813 5.94036 12.3675C6.28752 12.4833 6.642 12.5689 7 12.6246V22H9V12.6246C9.358 12.5689 9.71248 12.4833 10.0596 12.3675C11.2184 11.9813 12 10.8969 12 9.67544V2H10V9.67544C10 10.036 9.76927 10.3562 9.42719 10.4702C9.28635 10.5171 9.14378 10.5569 9 10.5896V2H7V10.5896C6.85622 10.5569 6.71365 10.5171 6.57281 10.4702C6.23073 10.3562 6 10.036 6 9.67544V2H4Z"
+                    fill="black" />
+                <path
+                    d="M15.607 2.97882C16.8591 1.72671 19 2.6135 19 4.38426V22H17V15.9997C16.5333 15.9985 16.1227 15.9922 15.7742 15.9594C15.3177 15.9164 14.8665 15.821 14.4451 15.5656C14.0317 15.3151 13.6849 14.9683 13.4344 14.5549C13.179 14.1335 13.0836 13.6823 13.0406 13.2258C13 12.7944 13 12.2678 13 11.6573L13 9.27259C13 6.91197 13.9378 4.64803 15.607 2.97882Z"
+                    fill="black" />
+            </svg><br><br>
+            Diet Tasks
+        </h1>
 
 
-        <div class="container taskCards">
+        <div class="container taskCards" style="margin-top: 50px;">
             <% if (noRerolls) { %>
                 <h1 class="error">Lacking Rerolls</h1>
                 <% } %>
-                    <h1>Points: <%= points %>
+                    <h1 class="text-center">Points: <%= points %>
                     </h1>
                     <div class="card" id="taskCard1">
                         <div class="card-body" id="taskBody1">
