--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -5,7 +5,7 @@
 
     <body>
         <div class="container2 inline">
-            <a href="/" id="back" type="button" style="font-size: 10px;">Back</a>
+            <a href="/" id="back" type="button">Back</a>
 
             <div class="Chatter">
                 <form action="/aichat-loading" method="get">
