fixed profile image issue

--- a/views/community.ejs
+++ b/views/community.ejs
@@ -73,7 +73,7 @@
                 <% posts.forEach((post, postIndex)=> { %>
                     <div class="post">
                         <div class="profile">
-                            <img src="<%= post.profileImage %>" alt="Profile Image">
+                            <img src="/images/<%= post.userId %>" alt="Profile Image">
                             <span class="username">
                                 <%= post.username %>
                             </span>
